--- a/freecodcamp.html
+++ b/freecodcamp.html
@@ -113,5 +113,9 @@
     <li>lasagna</li>
   </ul>
   <p>Top 3 things cats hate:</p>
-
+  <ol>
+    <li>dogs</li>
+    <li>water</li>
+    <li>loud sound</li>
+  </ol>
 </main>
